# Spotify-api-test

./: .gitignore
spotify-test-py/: pyproject.toml
spotify-test-py/tests/: test_spotify_test_py.py
spotify-test-rs/: Cargo.toml  dbg_output
spotify-test-rs/src/: auth.rs  lib.rs  main.rs  responses.rs  search.rs
